# advent-of-code-2016

./: Makefile  index.html
alloc-log/: Cargo.toml
alloc-log/src/: lib.rs
day-01/: Cargo.toml  aoc.js  aoc.js.mem  aoc.wasm  index.html
day-01/src/: grammar.lalrpop  grammar.rs  main.rs
day-02/: aoc.js  aoc.wasm  index.html
day-02/src/: main.rs  part1.rs  part2.rs
day-03/: Cargo.toml  aoc.js  aoc.js.mem  aoc.wasm  index.html
day-04/: Cargo.toml  aoc.js  aoc.js.mem  aoc.wasm  index.html  justfile
day-05/: Cargo.toml  aoc.asm.js  aoc.js  aoc.js.mem  aoc.wasm  index.html  profiling.txt
day-06/: Cargo.toml  aoc.asm.js  aoc.js  aoc.js.mem  aoc.wasm  index.html
day-07/: Cargo.toml  aoc.asm.js  aoc.js  aoc.js.mem  aoc.wasm  index.html
day-08/: Cargo.toml  aoc.asm.js  aoc.js  aoc.js.mem  aoc.wasm  index.html
day-09/: aoc.js.mem  aoc.wasm  aoc_asm.js  aoc_wasm.js  index.html
day-10/: Cargo.toml  aoc.js.mem  aoc.wasm  aoc_asm.js  aoc_wasm.js  index.html
day-11/: Cargo.toml  aoc.js  aoc.js.mem  index.html
day-12/: Cargo.toml  aoc.js  aoc.js.mem  index.html
day-12/src/: grammar.lalrpop  grammar.rs  main.rs
day-13/: Cargo.toml  aoc.js  aoc.js.mem  index.html  justfile
day-18/: aoc-0de4612024696b61.js.mem  aoc.wasm  aoc_asm.js  aoc_wasm.js  index.html
day-19/: Cargo.toml  aoc-41122a3ceffd21be.js.mem  aoc.wasm  aoc_asm.js  aoc_wasm.js  index.html
day-20/: aoc-e8c5a301d103c04e.js.mem  aoc.wasm  aoc_asm.js  aoc_wasm.js  index.html
day-21/: Cargo.toml  aoc-1749324b5c65a12e.js.mem  aoc.js  index.html
day-21/src/: grammar.lalrpop  grammar.rs  main.rs
(+13 files in other folders)
