[package]
name = "aoc"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
build = "build.rs"

[build-dependencies]
lalrpop = "0.12.0"

[profile.release]
lto = true

[dependencies]
libc = "*"
lazy_static = "*"
itertools = "*"
smallvec = "0.3.1"
arrayvec = "*"
lalrpop-util = "0.12.0"
odds = "0.2.25"
